Show training overview content background only on large and extra large screens to fix layout on smaller screens

--- a/src/assets/custom/css/_sass/_training-overview.scss
+++ b/src/assets/custom/css/_sass/_training-overview.scss
@@ -1,7 +1,9 @@
 .training-overview-content {
-  background-color: $navy--ultralight;
-  padding-top: calc(2 * #{$vertical-overlap});
-  margin-top: -$vertical-overlap ;
+  @include large-and-extra-large{
+    background-color: $navy--ultralight;
+    padding-top: calc(2 * #{$vertical-overlap});
+    margin-top: -$vertical-overlap ;
+  }
 }
 
 .training-overview-content__cards-wrapper {
